<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registrar">

    <TextView
        android:id="@+id/textView"
        android:layout_width="177dp"
        android:layout_height="0dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="34dp"
        android:text="@string/registrar_usuarios"
        app:layout_constraintBottom_toTopOf="@+id/usuarioRegistrar"
        app:layout_constraintEnd_toEndOf="@+id/usuarioRegistrar"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/usuarioRegistrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="46dp"
        android:ems="10"
        android:hint="@string/ususario"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/contrasenaRegistro"
        app:layout_constraintEnd_toEndOf="@+id/apellidoRegistrar"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/apellidoRegistrar"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/contrasenaRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginBottom="54dp"
        android:ems="10"
        android:hint="@string/contrase_a"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/nombreRegistrar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usuarioRegistrar"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/nombreRegistrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginBottom="48dp"
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/apellidoRegistrar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contrasenaRegistro"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/apellidoRegistrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:hint="@string/apellido"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/buttonRegistrar"
        app:layout_constraintEnd_toEndOf="@+id/buttonRegistrar"
        app:layout_constraintTop_toBottomOf="@+id/nombreRegistrar"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/buttonRegistrar"
        android:layout_width="219dp"
        android:layout_height="57dp"
        android:layout_marginBottom="29dp"
        android:text="@string/registrarboton"
        app:layout_constraintBottom_toTopOf="@+id/buttonCancelar"
        app:layout_constraintEnd_toEndOf="@+id/contrasenaRegistro"
        app:layout_constraintStart_toStartOf="@+id/nombreRegistrar"
        app:layout_constraintTop_toBottomOf="@+id/apellidoRegistrar" />

    <Button
        android:id="@+id/buttonCancelar"
        android:layout_width="211dp"
        android:layout_height="58dp"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginBottom="134dp"
        android:text="@string/cancelar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/buttonRegistrar"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/buttonRegistrar"
        app:layout_constraintTop_toBottomOf="@+id/buttonRegistrar" />
</androidx.constraintlayout.widget.ConstraintLayout>