<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:padding="1dp"
    tools:context=".VistaProdCliente">

    <ImageView
        android:id="@+id/prodImg"
        android:layout_width="152dp"
        android:layout_height="152dp"
        android:padding="1dp"
        app:srcCompat="@drawable/buscar_imagen" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="153dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/prodNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre_del_producto"
            android:text="@string/nombre_del_producto"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textIsSelectable="false" />

        <TextView
            android:id="@+id/prodPrecio"
            android:layout_width="match_parent"
            android:layout_height="33dp"
            android:clickable="false"
            android:hint="@string/precio"
            android:saveEnabled="false"
            android:text="@string/precio"
            android:textIsSelectable="false" />

        <TextView
            android:id="@+id/prodDescripcion"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/descripci_n" />

    </LinearLayout>

</LinearLayout>