<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">



        <EditText
            android:id="@+id/usuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="190dp"
            android:layout_marginBottom="72dp"
            android:ems="10"
            android:hint="@string/usuario"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/contrasena"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/contrasena"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="159dp"
            android:ems="10"
            android:hint="@string/contrase_a"
            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@+id/ingresar"
            app:layout_constraintStart_toStartOf="@+id/usuario"
            app:layout_constraintTop_toBottomOf="@+id/usuario"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/ingresar"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="57dp"
            android:layout_marginLeft="57dp"
            android:layout_marginEnd="57dp"
            android:layout_marginRight="57dp"
            android:layout_marginBottom="39dp"
            android:text="@string/ingresar"
            app:layout_constraintBottom_toTopOf="@+id/registrar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/contrasena" />

        <Button
            android:id="@+id/registrar"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="58dp"
            android:layout_marginLeft="58dp"
            android:layout_marginEnd="58dp"
            android:layout_marginRight="58dp"
            android:layout_marginBottom="64dp"
            android:text="@string/registrar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ingresar" />


</androidx.constraintlayout.widget.ConstraintLayout>